--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>House Beat Maker</title>
+  <title>Pro House Beat Maker</title>
   <script src="https://cdn.jsdelivr.net/npm/tone@14.8.39/build/Tone.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: radial-gradient(circle at top, #111 0%, #000 100%);
-      color: white;
+      background: #0a0a0a;
+      color: #fff;
       text-align: center;
       margin: 0;
       padding: 20px;
     }
     h1 {
       font-size: 2.5em;
-      margin-bottom: 10px;
       color: #0ff;
       text-shadow: 0 0 10px #0ff;
+      margin-bottom: 10px;
     }
     #pageLabel {
       font-size: 1.2em;
-      margin-bottom: 15px;
       color: #0ff;
-      text-shadow: 0 0 8px #0ff;
+      text-shadow: 0 0 6px #0ff;
+      margin-bottom: 15px;
     }
     #grid {
       display: grid;
-      grid-template-columns: repeat(16, 40px);
-      gap: 6px;
+      grid-template-columns: repeat(16, 50px);
+      gap: 8px;
       margin: 20px auto;
-      width: max-content;
-      background: #111;
       padding: 15px;
+      background: #111;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
+      box-shadow: 0 0 30px rgba(0,255,255,0.2);
     }
     .cell {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
       background: #222;
-      border-radius: 8px;
       cursor: pointer;
-      transition: background 0.2s, transform 0.1s;
+      transition: all 0.15s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .cell:hover { transform: scale(1.05); }
     .cell.active {
       background: #0ff;
-      box-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
+      box-shadow: 0 0 12px #0ff, 0 0 20px #0ff inset;
     }
     .cell.current {
       border: 2px solid #f0f;
-      box-shadow: 0 0 15px #f0f;
+      box-shadow: 0 0 12px #f0f;
     }
     button {
       margin: 10px;
@@ -59,14 +60,14 @@
       border: none;
       border-radius: 8px;
       background: #0ff;
-      color: black;
-      cursor: pointer;
+      color: #000;
       font-weight: bold;
+      cursor: pointer;
       transition: background 0.2s;
     }
     button:hover { background: #0cc; }
     .controls {
-      margin-top: 25px;
+      margin-top: 20px;
       display: flex;
       justify-content: center;
       gap: 40px;
@@ -77,16 +78,22 @@
       flex-direction: column;
       align-items: center;
     }
-    input[type=range] { width: 150px; }
-    label { margin-bottom: 6px; font-size: 0.9em; color: #aaa; }
+    input[type=range] {
+      width: 150px;
+    }
+    label {
+      margin-bottom: 6px;
+      font-size: 0.9em;
+      color: #aaa;
+    }
     @media (max-width: 768px) {
-      #grid { grid-template-columns: repeat(16, 20px); }
-      .cell { width: 20px; height: 20px; }
+      #grid { grid-template-columns: repeat(16, 25px); gap: 4px; }
+      .cell { width: 25px; height: 25px; }
     }
   </style>
 </head>
 <body>
-  <h1>House Beat Maker</h1>
+  <h1>Pro House Beat Maker</h1>
   <div id="pageLabel">Page: Drums</div>
   <div id="grid"></div>
   <div>
@@ -125,7 +132,7 @@
           cell.classList.add("cell");
           cell.dataset.row = r;
           cell.dataset.step = i;
-          cell.onclick = () => { cell.classList.toggle("active"); };
+          cell.onclick = () => cell.classList.toggle("active");
           grid.appendChild(cell);
           cells.push(cell);
         }
@@ -135,7 +142,7 @@
 
     buildGrid();
 
-    // instruments
+    // Instruments
     const instruments = {
       "Kick": new Tone.MembraneSynth(),
       "Snare": new Tone.NoiseSynth({ envelope: { attack: 0.001, decay: 0.2, sustain: 0 } }),
@@ -145,12 +152,13 @@
       "Shaker": new Tone.MetalSynth({ envelope: { attack: 0.001, decay: 0.05, release: 0.05 }, volume: -8 })
     };
 
+    // Master filter
     const filter = new Tone.Filter(5000, "lowpass").toDestination();
     Object.values(instruments).forEach(inst => inst.connect(filter));
 
     let stepIndex = 0;
     const loop = new Tone.Loop((time) => {
-      // clear previous step indicator
+      // Clear previous step indicator
       cells.forEach(c => c.classList.remove("current"));
 
       pages[currentPage].instruments.forEach((instName, r) => {
@@ -158,7 +166,7 @@
         if (cell.classList.contains("active")) {
           instruments[instName].triggerAttackRelease("C2", "8n", time);
         }
-        cell.classList.add("current"); // highlight current step
+        cell.classList.add("current");
       });
 
       stepIndex = (stepIndex + 1) % 16;
@@ -185,11 +193,11 @@
       buildGrid();
     };
 
-    document.getElementById("tempo").addEventListener("input", (e) => {
+    document.getElementById("tempo").addEventListener("input", e => {
       Tone.Transport.bpm.value = +e.target.value;
     });
 
-    document.getElementById("filter").addEventListener("input", (e) => {
+    document.getElementById("filter").addEventListener("input", e => {
       filter.frequency.value = +e.target.value;
     });
   </script>
