--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Pro House Lane Sequencer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta charset="UTF-8">
+<title>Pro House Lane Sequencer (Stable)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/tone@14.8.39/build/Tone.js"></script>
 <style>
 :root {
@@ -17,10 +17,7 @@ h1 { font-size:1.35rem; font-weight:600; margin:0 0 10px; }
 .badge { font-size:.85rem; color:#bdbdbd; padding:6px 10px; background:var(--panel); border:1px solid var(--border); border-radius:8px; min-width:120px; }
 #gridWrap { display:grid; place-items:center; }
 .lane { display:flex; gap:6px; margin-bottom:12px; }
-.block {
-  width:40px; height:40px; border-radius:6px; background:#1e1e1e;
-  border:1px solid #2f2f2f; cursor:pointer; transition:0.1s; display:flex; align-items:center; justify-content:center;
-}
+.block { width:40px; height:40px; border-radius:6px; background:#1e1e1e; border:1px solid #2f2f2f; cursor:pointer; display:flex; align-items:center; justify-content:center; transition:.1s; }
 .block.active { background:var(--accent); box-shadow:0 0 8px var(--accent); }
 .block.current { outline:2px solid var(--current); }
 .toolbar { display:flex; flex-wrap:wrap; gap:8px; justify-content:center; margin:8px 0 14px; }
@@ -29,9 +26,7 @@ button:hover, select:hover { background:#1c1c1c; border-color:#3a3a3a; }
 .controls { display:flex; flex-wrap:wrap; gap:26px; justify-content:center; margin-top:6px; }
 .control { display:flex; flex-direction:column; align-items:center; gap:10px; }
 .control label { font-size:.85rem; color:#bdbdbd; }
-input[type="range"] {
-  -webkit-appearance:none; appearance:none; width:180px; height:36px; background:transparent; padding:6px 0;
-}
+input[type="range"] { -webkit-appearance:none; appearance:none; width:180px; height:36px; background:transparent; padding:6px 0; }
 input[type="range"]::-webkit-slider-runnable-track { height:10px; background:#2a2a2a; border-radius:999px; border:1px solid #3a3a3a; }
 input[type="range"]::-moz-range-track { height:10px; background:#2a2a2a; border-radius:999px; border:1px solid #3a3a3a; }
 input[type="range"]::-webkit-slider-thumb { -webkit-appearance:none; width:24px; height:24px; border-radius:50%; background:var(--accent); border:2px solid #0f0f0f; margin-top:-7px; box-shadow:0 0 10px rgba(0,184,148,.4); }
@@ -66,8 +61,9 @@ input[type="range"]::-moz-range-thumb { width:24px; height:24px; border-radius:5
 const lanes = ["Kick","Snare","HiHat","Clap","Shaker","Bass"];
 const blocksPerLane = 8;
 const active = lanes.map(()=>Array(blocksPerLane).fill(false));
+const laneSteps = lanes.map(()=>0); // independent step counters
 const gridWrap = document.getElementById("gridWrap");
-let stepIndex=0, playing=false;
+let playing=false;
 
 // ---------------- AUDIO ----------------
 const instruments = {
@@ -90,7 +86,7 @@ function buildGrid(){
     for(let b=0;b<blocksPerLane;b++){
       const blk = document.createElement("div"); blk.className="block";
       if(active[r][b]) blk.classList.add("active");
-      if(b===stepIndex) blk.classList.add("current");
+      if(b===laneSteps[r]) blk.classList.add("current");
       let toggling=false;
       blk.addEventListener("pointerdown", ()=>{
         if(toggling) return; toggling=true;
@@ -107,7 +103,7 @@ function updateHighlight(){
   rows.forEach((row,r)=>{
     const blks=row.children;
     for(let b=0;b<blks.length;b++){
-      blks[b].classList.toggle("current",b===stepIndex);
+      blks[b].classList.toggle("current",b===laneSteps[r]);
     }
   });
 }
@@ -115,17 +111,14 @@ function updateHighlight(){
 // ---------------- LOOP ----------------
 const loop = new Tone.Loop(time=>{
   lanes.forEach((lane,r)=>{
-    if(active[r][stepIndex]){
+    if(active[r][laneSteps[r]]){
       const note = lane==="Bass"?"C2":"C2";
-      instruments[lane].triggerAttackRelease(note,"8n",time);
+      instruments[lane].triggerAttackRelease(note,"8n",time + r*0.003); // stagger per lane
     }
+    laneSteps[r]=(laneSteps[r]+1)%blocksPerLane;
   });
-  stepIndex=(stepIndex+1)%blocksPerLane;
   updateHighlight();
 },"16n");
-
-// Watchdog to prevent freeze
-Tone.Transport.scheduleRepeat(()=>{ stepIndex=stepIndex%blocksPerLane; updateHighlight(); },"1m");
 
 // ---------------- CONTROLS ----------------
 document.getElementById("play").addEventListener("click", async()=>{
@@ -133,7 +126,7 @@ document.getElementById("play").addEventListener("click", async()=>{
     await Tone.start(); loop.start(0); Tone.Transport.start();
     playing=true; document.getElementById("statusLabel").textContent="Status: Playing";
   } else {
-    Tone.Transport.stop(); loop.stop(); stepIndex=0; updateHighlight();
+    Tone.Transport.stop(); loop.stop(); laneSteps.fill(0); updateHighlight();
     playing=false; document.getElementById("statusLabel").textContent="Status: Stopped";
   }
 });
@@ -147,7 +140,6 @@ function clearAll(){for(let r=0;r<lanes.length;r++) active[r].fill(false);}
 function randomizeVibe(name){
   clearAll();
   let bpm=124, cutoff=5500, swing=0.12;
-  const dens={Kick:0.5,Snare:0.2,HiHat:0.5,Clap:0.2,Shaker:0.4,Bass:0.25};
   switch(name){
     case"fisher": bpm=125; cutoff=7000; swing=0.14;
       [0,2,4,6].forEach(s=>active[0][s]=true); [1,5].forEach(s=>active[1][s]=true); [1,3,5,7].forEach(s=>active[2][s]=true);
