--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Pro House Lane Sequencer (Stable)</title>
+<title>Pro House 16-Step Sequencer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/tone@14.8.39/build/Tone.js"></script>
 <style>
@@ -10,65 +10,52 @@
   --bg:#121212; --panel:#181818; --border:#2a2a2a;
   --text:#e0e0e0; --accent:#00b894; --current:#ffffff;
 }
-* { box-sizing:border-box; }
 body { background:var(--bg); color:var(--text); font-family:system-ui, sans-serif; margin:0; padding:24px; text-align:center; }
 h1 { font-size:1.35rem; font-weight:600; margin:0 0 10px; }
-.topbar { display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin-bottom:10px; }
-.badge { font-size:.85rem; color:#bdbdbd; padding:6px 10px; background:var(--panel); border:1px solid var(--border); border-radius:8px; min-width:120px; }
-#gridWrap { display:grid; place-items:center; }
-.lane { display:flex; gap:6px; margin-bottom:12px; }
+#gridWrap { display:grid; justify-content:center; gap:6px; margin:12px 0; }
+.lane { display:flex; gap:6px; }
 .block { width:40px; height:40px; border-radius:6px; background:#1e1e1e; border:1px solid #2f2f2f; cursor:pointer; display:flex; align-items:center; justify-content:center; transition:.1s; }
 .block.active { background:var(--accent); box-shadow:0 0 8px var(--accent); }
 .block.current { outline:2px solid var(--current); }
-.toolbar { display:flex; flex-wrap:wrap; gap:8px; justify-content:center; margin:8px 0 14px; }
-button, select { background:var(--panel); color:var(--text); border:1px solid var(--border); border-radius:8px; padding:10px 14px; font-size:.95rem; cursor:pointer; }
-button:hover, select:hover { background:#1c1c1c; border-color:#3a3a3a; }
-.controls { display:flex; flex-wrap:wrap; gap:26px; justify-content:center; margin-top:6px; }
-.control { display:flex; flex-direction:column; align-items:center; gap:10px; }
-.control label { font-size:.85rem; color:#bdbdbd; }
-input[type="range"] { -webkit-appearance:none; appearance:none; width:180px; height:36px; background:transparent; padding:6px 0; }
-input[type="range"]::-webkit-slider-runnable-track { height:10px; background:#2a2a2a; border-radius:999px; border:1px solid #3a3a3a; }
-input[type="range"]::-moz-range-track { height:10px; background:#2a2a2a; border-radius:999px; border:1px solid #3a3a3a; }
-input[type="range"]::-webkit-slider-thumb { -webkit-appearance:none; width:24px; height:24px; border-radius:50%; background:var(--accent); border:2px solid #0f0f0f; margin-top:-7px; box-shadow:0 0 10px rgba(0,184,148,.4); }
-input[type="range"]::-moz-range-thumb { width:24px; height:24px; border-radius:50%; background:var(--accent); border:2px solid #0f0f0f; box-shadow:0 0 10px rgba(0,184,148,.4); }
-@media(max-width:800px){ .block{width:30px;height:30px;} input[type="range"]{width:160px;} }
+.controls, .toolbar { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; margin:8px 0; }
+button, select, input[type=range] { background:var(--panel); color:var(--text); border:1px solid var(--border); border-radius:8px; padding:8px 12px; font-size:.95rem; cursor:pointer; }
+input[type=range]{width:160px; height:36px; margin-top:4px;}
+input[type=range]::-webkit-slider-thumb, input[type=range]::-moz-range-thumb { width:20px; height:20px; border-radius:50%; background:var(--accent); border:2px solid #0f0f0f; }
+@media(max-width:800px){ .block{width:30px;height:30px;} input[type=range]{width:140px;} }
 </style>
 </head>
 <body>
-<h1>Pro House Lane Sequencer</h1>
-<div class="topbar">
-  <div class="badge" id="statusLabel">Status: Stopped</div>
-</div>
-<div id="gridWrap"></div>
+<h1>Pro House 16-Step Sequencer</h1>
 <div class="toolbar">
   <button id="play">▶ Play / Stop</button>
-  <select id="randomVibe">
-    <option value="fisher">Randomize: Fisher</option>
-    <option value="john">Randomize: John Summit</option>
-    <option value="dom">Randomize: Dom Dolla</option>
-    <option value="kygo">Randomize: Kygo</option>
-    <option value="alesso">Randomize: Alesso</option>
-    <option value="full">Randomize: Full Random</option>
+  <select id="vibeSelect">
+    <option value="fisher">Fisher</option>
+    <option value="john">John Summit</option>
+    <option value="dom">Dom Dolla</option>
+    <option value="kygo">Kygo</option>
+    <option value="alesso">Alesso</option>
+    <option value="random">Random</option>
   </select>
   <button id="applyVibe">Apply</button>
 </div>
 <div class="controls">
-  <div class="control"><label for="tempo">Tempo (BPM)</label><input type="range" id="tempo" min="80" max="160" value="124"></div>
-  <div class="control"><label for="filter">Low-pass Cutoff</label><input type="range" id="filter" min="200" max="12000" value="5500"></div>
-  <div class="control"><label for="swing">Swing (%)</label><input type="range" id="swing" min="0" max="100" value="12"></div>
+  <div><label>Tempo (BPM)</label><input type="range" id="tempo" min="80" max="160" value="124"></div>
+  <div><label>Swing (%)</label><input type="range" id="swing" min="0" max="100" value="12"></div>
+  <div><label>Filter (Hz)</label><input type="range" id="filter" min="200" max="12000" value="5500"></div>
 </div>
+<div id="gridWrap"></div>
+
 <script>
 const lanes = ["Kick","Snare","HiHat","Clap","Shaker","Bass"];
-const blocksPerLane = 8;
-const active = lanes.map(()=>Array(blocksPerLane).fill(false));
-const laneSteps = lanes.map(()=>0); // independent step counters
+const steps = 16;
+const active = lanes.map(()=>Array(steps).fill(false));
 const gridWrap = document.getElementById("gridWrap");
-let playing=false;
+let currentStep=0, playing=false;
 
-// ---------------- AUDIO ----------------
+// ---------- AUDIO SETUP ----------
 const instruments = {
   "Kick": new Tone.MembraneSynth(),
-  "Snare": new Tone.NoiseSynth({ envelope: { attack:0.001, decay:0.2, sustain:0 } }),
+  "Snare": new Tone.NoiseSynth({ envelope:{ attack:0.001, decay:0.2, sustain:0 } }),
   "HiHat": new Tone.MetalSynth({ envelope:{attack:0.001,decay:0.08,release:0.08}, resonance:4000 }),
   "Clap": new Tone.NoiseSynth({ envelope:{attack:0.001, decay:0.15}, volume:-4 }),
   "Shaker": new Tone.MetalSynth({ envelope:{attack:0.001,decay:0.05,release:0.03}, volume:-8 }),
@@ -78,20 +65,17 @@ const filter = new Tone.Filter(5500,"lowpass").toDestination();
 Object.values(instruments).forEach(inst=>inst.connect(filter));
 Tone.Transport.bpm.value=124; Tone.Transport.swing=0.12; Tone.Transport.swingSubdivision="16n";
 
-// ---------------- UI ----------------
+// ---------- GRID ----------
 function buildGrid(){
   gridWrap.innerHTML="";
   lanes.forEach((lane,r)=>{
     const row = document.createElement("div"); row.className="lane";
-    for(let b=0;b<blocksPerLane;b++){
+    for(let s=0;s<steps;s++){
       const blk = document.createElement("div"); blk.className="block";
-      if(active[r][b]) blk.classList.add("active");
-      if(b===laneSteps[r]) blk.classList.add("current");
-      let toggling=false;
-      blk.addEventListener("pointerdown", ()=>{
-        if(toggling) return; toggling=true;
-        active[r][b] = !active[r][b]; blk.classList.toggle("active",active[r][b]);
-        setTimeout(()=>toggling=false,30);
+      if(active[r][s]) blk.classList.add("active");
+      if(s===currentStep) blk.classList.add("current");
+      blk.addEventListener("pointerdown", ()=>{ 
+        active[r][s] = !active[r][s]; blk.classList.toggle("active", active[r][s]);
       });
       row.appendChild(blk);
     }
@@ -102,73 +86,59 @@ function updateHighlight(){
   const rows = document.querySelectorAll(".lane");
   rows.forEach((row,r)=>{
     const blks=row.children;
-    for(let b=0;b<blks.length;b++){
-      blks[b].classList.toggle("current",b===laneSteps[r]);
+    for(let s=0;s<blks.length;s++){
+      blks[s].classList.toggle("current", s===currentStep);
     }
   });
 }
 
-// ---------------- LOOP ----------------
+// ---------- LOOP ----------
 const loop = new Tone.Loop(time=>{
   lanes.forEach((lane,r)=>{
-    if(active[r][laneSteps[r]]){
-      const note = lane==="Bass"?"C2":"C2";
-      instruments[lane].triggerAttackRelease(note,"8n",time + r*0.003); // stagger per lane
+    if(active[r][currentStep]){
+      instruments[lane].triggerAttackRelease("C2","8n", time + r*0.002); // slight stagger
     }
-    laneSteps[r]=(laneSteps[r]+1)%blocksPerLane;
   });
+  currentStep = (currentStep+1)%steps;
   updateHighlight();
 },"16n");
 
-// ---------------- CONTROLS ----------------
+// ---------- CONTROLS ----------
 document.getElementById("play").addEventListener("click", async()=>{
   if(!playing){
-    await Tone.start(); loop.start(0); Tone.Transport.start();
-    playing=true; document.getElementById("statusLabel").textContent="Status: Playing";
+    await Tone.start();
+    loop.start(0);
+    Tone.Transport.start();
+    playing=true;
   } else {
-    Tone.Transport.stop(); loop.stop(); laneSteps.fill(0); updateHighlight();
-    playing=false; document.getElementById("statusLabel").textContent="Status: Stopped";
+    Tone.Transport.stop();
+    loop.stop();
+    currentStep=0; updateHighlight();
+    playing=false;
   }
 });
-document.getElementById("tempo").addEventListener("input",e=>Tone.Transport.bpm.value=+e.target.value);
-document.getElementById("filter").addEventListener("input",e=>filter.frequency.value=+e.target.value);
-document.getElementById("swing").addEventListener("input",e=>{Tone.Transport.swing=(+e.target.value)/100; Tone.Transport.swingSubdivision="16n";});
+document.getElementById("tempo").addEventListener("input", e=>Tone.Transport.bpm.value=+e.target.value);
+document.getElementById("swing").addEventListener("input", e=>Tone.Transport.swing=(+e.target.value)/100);
+document.getElementById("filter").addEventListener("input", e=>filter.frequency.value=+e.target.value);
 
-// ---------------- RANDOMIZE VIBE ----------------
-function coin(prob){return Math.random()<prob;}
-function clearAll(){for(let r=0;r<lanes.length;r++) active[r].fill(false);}
+// ---------- RANDOMIZE / VIBES ----------
+function clearAll(){ active.forEach(l=>l.fill(false)); }
 function randomizeVibe(name){
   clearAll();
-  let bpm=124, cutoff=5500, swing=0.12;
   switch(name){
-    case"fisher": bpm=125; cutoff=7000; swing=0.14;
-      [0,2,4,6].forEach(s=>active[0][s]=true); [1,5].forEach(s=>active[1][s]=true); [1,3,5,7].forEach(s=>active[2][s]=true);
-      break;
-    case"john": bpm=126; cutoff=7500; swing=0.16;
-      [0,2,4,6].forEach(s=>active[0][s]=true); [4,6].forEach(s=>active[1][s]=true); for(let s=0;s<8;s++) if(s%2==1||coin(.2)) active[2][s]=true;
-      break;
-    case"dom": bpm=124; cutoff=6200; swing=0.22;
-      [0,2,4,6].forEach(s=>active[0][s]=true); [1,3,5,7].forEach(s=>active[1][s]=true); [2,4,6,0].forEach(s=>active[2][s]=true);
-      break;
-    case"kygo": bpm=105; cutoff=9000; swing=0.10;
-      [0,4].forEach(s=>active[0][s]=true); [1,5].forEach(s=>active[1][s]=true); [0,2,4,6].forEach(s=>active[2][s]=true);
-      break;
-    case"alesso": bpm=126; cutoff=8000; swing=0.12;
-      [0,2,4,6].forEach(s=>active[0][s]=true); [1,5].forEach(s=>active[1][s]=true); [0,2,4,6].forEach(s=>active[2][s]=true);
-      break;
-    case"full": for(let r=0;r<lanes.length;r++) for(let b=0;b<blocksPerLane;b++) if(coin(0.5)) active[r][b]=true;
-      bpm=120+Math.round(Math.random()*20-10); cutoff=3500+Math.round(Math.random()*7000); swing=0.08+Math.random()*0.2;
-      break;
+    case "fisher": [0,2,4,6].forEach(i=>active[0][i]=true); [1,5].forEach(i=>active[1][i]=true); [1,3,5,7].forEach(i=>active[2][i]=true); break;
+    case "john": [0,2,4,6].forEach(i=>active[0][i]=true); [4,6].forEach(i=>active[1][i]=true); [1,3,5,7].forEach(i=>active[2][i]=true); break;
+    case "dom": [0,2,4,6].forEach(i=>active[0][i]=true); [1,3,5,7].forEach(i=>active[1][i]=true); [0,2,4,6].forEach(i=>active[2][i]=true); break;
+    case "kygo": [0,4,8,12].forEach(i=>active[0][i]=true); [2,6,10,14].forEach(i=>active[1][i]=true); break;
+    case "alesso": [0,2,4,6,8,10,12,14].forEach(i=>active[0][i]=true); [1,5,9,13].forEach(i=>active[1][i]=true); break;
+    case "random": active.forEach(l=>l.forEach((_,i)=>l[i]=Math.random()>0.5)); break;
   }
-  Tone.Transport.bpm.value=bpm; document.getElementById("tempo").value=bpm;
-  filter.frequency.value=cutoff; document.getElementById("filter").value=cutoff;
-  Tone.Transport.swing=swing; document.getElementById("swing").value=Math.round(swing*100);
   buildGrid(); updateHighlight();
 }
-document.getElementById("applyVibe").addEventListener("click",()=>{const vibe=document.getElementById("randomVibe").value; randomizeVibe(vibe);});
+document.getElementById("applyVibe").addEventListener("click", ()=>randomizeVibe(document.getElementById("vibeSelect").value));
 
-// ---------------- BOOT ----------------
-randomizeVibe("full");
+// ---------- INIT ----------
+randomizeVibe("random");
 </script>
 </body>
 </html>
